--- a/src/assets/components/_routes.scss
+++ b/src/assets/components/_routes.scss
@@ -1,13 +1,12 @@
 .routes {
     height: 100%;
 
-    margin-left: 60px;
-
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
+    flex: 1;
 }
 
 .staticRoutes {
+    display: flex;
+
     height: 100%;
 
     margin-left: 60px;
