Fixed bug with displaying site and equipment pages

--- a/src/assets/components/_sites.scss
+++ b/src/assets/components/_sites.scss
@@ -17,3 +17,17 @@
         @include dataGrid;
     }
 }
+
+.message {
+    @include mediumSmallTitle;
+
+    width: 50%;
+
+    margin: 64px auto;
+
+    align-self: center;
+    text-align: center;
+    justify-content: center;
+
+    color: $companyName;
+}
