--- a/src/assets/components/_sites.scss
+++ b/src/assets/components/_sites.scss
@@ -15,6 +15,7 @@
 
     .dataGrid {
         @include dataGrid;
+        height: 78vh;
     }
 
     .csvDownloadButton {
@@ -34,6 +35,14 @@
             box-shadow: rgba(180, 101, 28, 0.25) 0px 30px 60px -12px inset,
                 rgba(216, 125, 6, 0.705) 0px 18px 36px -18px inset;
         }
+    }
+
+    .addEquipmentButton {
+        width: 200px;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: 0px;
+        position: relative;
     }
 }
 
