--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -1,11 +1,17 @@
 .button {
+    width: fit-content;
     border-radius: 7px;
     text-align: center;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
     user-select: none;
+    margin-bottom: 5px;
     cursor: pointer;
+}
+
+.right {
+    margin-left: auto;
 }
 
 .tableControl {
