Changed styling of csv download button to acommadate the button bar needed to get 2 buttons to right align on the site equipment tab.

--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -8,6 +8,8 @@
     user-select: none;
     margin-bottom: 5px;
     cursor: pointer;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
 }
 
 .right {
