Faults now use updated system

--- a/src/components/Dashboard/siteCard.scss
+++ b/src/components/Dashboard/siteCard.scss
@@ -41,6 +41,11 @@
             margin: 0 8px;
             width: 128px;
         }
+
+        .truncate {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     h3 {
