--- a/src/assets/components/_siteEquipment.scss
+++ b/src/assets/components/_siteEquipment.scss
@@ -1,7 +1,8 @@
 .site-equipment {
     display: flex;
     flex-flow: column;
-    height: calc(100% - 2rem);
+    margin: 0 16px;
+    height: 100%;
 
     h1 {
         @include mediumTitle;
