Ensure data grid styling is consistent

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -4,6 +4,7 @@
 @import 'designLanguage/_forms';
 @import 'designLanguage/_cards';
 @import 'designLanguage/_tables';
+@import 'designLanguage/_dataGrid';
 
 @import 'components/_app';
 @import 'components/_contactUs';
