--- a/src/assets/components/_loggerTab.scss
+++ b/src/assets/components/_loggerTab.scss
@@ -10,9 +10,7 @@
     }
 
     .dataGrid {
-        z-index: 1;
-        width: 100%;
-        flex: 1 1 auto;
+        @include dataGrid;
     }
 
     .csvDownloadButton {
