--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -33,5 +33,8 @@
 @import 'components/userSettings';
 @import 'components/_loggerTab.scss';
 @import 'components/_toggleSwitch.scss';
+@import 'components/_searchbar.scss';
+@import 'components/_siteCard.scss';
+@import 'components/_statistic.scss';
 
 @import 'bootstrap.scss';
