YADA-73 YADA-74 YADA-75 continuing implementation

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -36,5 +36,6 @@
 @import 'components/_searchbar.scss';
 @import 'components/_siteCard.scss';
 @import 'components/_statistic.scss';
+@import 'components/_equipmentDashboard';
 
 @import 'bootstrap.scss';
