--- a/src/assets/components/_dynamicNavbar.scss
+++ b/src/assets/components/_dynamicNavbar.scss
@@ -7,6 +7,7 @@
     float: left;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    max-width: 250px;
 
     .navbarHeader {
         padding-top: 15px;
