restyles user settings to be a little better, page populates user settings on reload

--- a/src/assets/components/_toggleSwitch.scss
+++ b/src/assets/components/_toggleSwitch.scss
@@ -18,7 +18,7 @@
         margin-left: $height;
         position: absolute;
         z-index: 2;
-        background-color: green;
+        background-color: $turqois;
         width: $height * 1.2;
         height: $height * 1.2;
         border-radius: ($height * 1.2) / 2;
