--- a/src/assets/designLanguage/_forms.scss
+++ b/src/assets/designLanguage/_forms.scss
@@ -21,6 +21,13 @@
     }
 }
 
+@mixin wideBlueInput {
+    @include wideInput;
+    &:required:valid {
+        border-bottom-color: $turqois;
+    }
+}
+
 @mixin smallInput {
     display: block;
     border-width: 2px;
