--- a/src/assets/components/_userSettings.scss
+++ b/src/assets/components/_userSettings.scss
@@ -1,5 +1,6 @@
 .userSettings {
     margin: 0 16px;
+    margin-right: 50px;
     height: 100%;
     width: 100%;
 
@@ -8,19 +9,86 @@
         color: $companyName;
     }
 
-    input {
-        @include wideInput;
-    }
-
     .primaryBtn {
         @include filledPrimaryButton;
     }
 
     .deleteBtn {
-        @include filledDangerButton;
+        @include borderedDangerButton;
     }
 
     .pswdLink {
         @include link;
+    }
+
+    .formContainer {
+        display: flex;
+        column-gap: 40px;
+        margin-top: 40px;
+
+        @media (max-width: 900px) {
+            display: block;
+            column-gap: 0px;
+        }
+    }
+
+    .inputGroup {
+        display: flex;
+        vertical-align: center;
+        label {
+            padding-top: 15px;
+            flex: 2;
+            @include tinyTitle;
+        }
+        input {
+            flex: 7;
+            @include wideBlueInput;
+        }
+    }
+
+    .checkGroup {
+        display: flex;
+        vertical-align: center;
+        label {
+            flex: 2;
+            @include tinyTitle;
+        }
+        .checkBoxContainer {
+            flex: 7;
+        }
+    }
+
+    .buttonsContainer {
+        display: flex;
+        .pad {
+            flex: 2;
+        }
+        .buttons {
+            margin-top: 15px;
+            flex: 7;
+            button {
+                margin-right: 20px;
+            }
+        }
+    }
+
+    .left {
+        flex: 1;
+    }
+
+    .right {
+        flex: 1;
+    }
+
+    .resetPasswordForm {
+        @media (max-width: 900px) {
+            margin-top: 40px;
+        }
+        input {
+            @include wideBlueInput;
+        }
+        button {
+            @include filledPrimaryButton;
+        }
     }
 }
