--- a/src/assets/designLanguage/_types.scss
+++ b/src/assets/designLanguage/_types.scss
@@ -22,6 +22,12 @@
     font-weight: 400;
 }
 
+@mixin tinyTitle {
+    font-size: 17px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+}
+
 @mixin link {
     font-family: 'Lato', sans-serif;
     color: $companyName;
