--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -37,5 +37,6 @@
 @import 'components/_siteCard.scss';
 @import 'components/_statistic.scss';
 @import 'components/_equipmentDashboard';
+@import 'components/siteConfigTab';
 
 @import 'bootstrap.scss';
