--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -8,7 +8,7 @@
     user-select: none;
     margin-bottom: 5px;
     cursor: pointer;
-    margin-left: 0.25rem;
+    // margin-left: 0.25rem;
     margin-right: 0.25rem;
 }
 
@@ -26,9 +26,17 @@
     color: white;
 }
 
+.warningSecondary {
+    @include borderedDangerButton;
+}
+
 .loggerInfoShow {
     background-color: $buttonDarkOrange;
     color: white;
     margin-bottom: 0.5rem;
     width: fit-content;
+}
+
+.save {
+    @include filledPrimaryButton;
 }
