--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -2,9 +2,6 @@
     width: fit-content;
     border-radius: 7px;
     text-align: center;
-    padding: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
     user-select: none;
     margin-bottom: 5px;
     cursor: pointer;
@@ -19,6 +16,10 @@
 .tableControl {
     background-color: $buttonLightOrange;
     color: $buttonDarkOrange;
+
+    .icon {
+        background-color: $buttonDarkOrange;
+    }
 }
 
 .warning {
@@ -39,4 +40,24 @@
 
 .save {
     @include filledPrimaryButton;
+}
+
+.text {
+    float: left;
+    padding: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.icon {
+    float: left;
+    height: 100%;
+    border-radius: 7px;
+    padding-left: 7px;
+    padding-right: 7px;
+    img {
+        width: 20px;
+        height: 20px;
+        margin-top: 10px;
+    }
 }
