functioning error button

--- a/src/assets/designLanguage/_variables.scss
+++ b/src/assets/designLanguage/_variables.scss
@@ -8,6 +8,7 @@ $offWhite: #f5f5f5;
 $shadow: #c9c9c9;
 $lightGreen: #6fcf97;
 $lightRed: #eb5757;
+$lightPink: #f9cdcd;
 $lightOrange: #f2994a;
 $buttonLightOrange: #f4d3b4;
 $buttonDarkOrange: #d96c06;
