--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -7,6 +7,7 @@
     cursor: pointer;
     // margin-left: 0.25rem;
     margin-right: 0.25rem;
+    display: inline-block;
 }
 
 .right {
@@ -23,8 +24,16 @@
 }
 
 .warning {
-    background-color: $lightRed;
-    color: white;
+    background-color: $lightPink;
+    color: $lightRed;
+
+    .icon {
+        background-color: $lightRed;
+        img {
+            width: 26px;
+            height: 32px;
+        }
+    }
 }
 
 .warningSecondary {
@@ -45,8 +54,8 @@
 .text {
     float: left;
     padding: 8px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .icon {
