--- a/src/assets/components/_siteEquipment.scss
+++ b/src/assets/components/_siteEquipment.scss
@@ -41,4 +41,19 @@
         width: fit-content;
         margin-left: auto;
     }
+
+    .title-button-flex {
+        display: flex;
+        h1,
+        div {
+            flex: 1;
+        }
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        height: fit-content;
+    }
 }
