moves chevron to same column with delete

--- a/src/assets/components/_siteEquipment.scss
+++ b/src/assets/components/_siteEquipment.scss
@@ -41,4 +41,9 @@
         width: fit-content;
         margin-left: auto;
     }
+
+    .actions {
+        display: flex;
+        justify-content: space-around;
+    }
 }
