--- a/src/assets/components/_siteEquipment.scss
+++ b/src/assets/components/_siteEquipment.scss
@@ -46,4 +46,8 @@
         display: flex;
         justify-content: space-around;
     }
+
+    .nameColumn {
+        @include editableTableField;
+    }
 }
