--- a/src/assets/designLanguage/_forms.scss
+++ b/src/assets/designLanguage/_forms.scss
@@ -54,3 +54,16 @@
 .userForms {
     height: 100%;
 }
+
+@mixin editableTableField {
+    padding: 5px 10px 5px 10px;
+    border-radius: 5px;
+    background-color: lighten($lightGray, 5%);
+    width: 400px;
+
+    &:focus {
+        border-width: 1px;
+        border-color: $lightRed;
+        outline: none;
+    }
+}
