adds pencil icon to editable table fields

--- a/src/assets/components/_siteEquipment.scss
+++ b/src/assets/components/_siteEquipment.scss
@@ -50,4 +50,9 @@
     .nameColumn {
         @include editableTableField;
     }
+
+    .editableTable {
+        display: flex;
+        gap: 5px;
+    }
 }
