--- a/src/assets/components/_userManagement.scss
+++ b/src/assets/components/_userManagement.scss
@@ -24,4 +24,9 @@
     .phoneColumn {
         @include editableTableField;
     }
+
+    .tableEditable {
+        display: flex;
+        gap: 5px;
+    }
 }
