--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -38,5 +38,6 @@
 @import 'components/_statistic.scss';
 @import 'components/_equipmentDashboard';
 @import 'components/_channelTemplate';
+@import 'components/_modal';
 
 @import 'bootstrap.scss';
