--- a/src/assets/components/_modal.scss
+++ b/src/assets/components/_modal.scss
@@ -5,12 +5,15 @@
     left: 0;
     height: 100%;
     width: 100%;
+    animation: fadeIn ease 0.5s;
+    z-index: 10;
 }
 
 .modal {
     @include floatingCard;
     position: absolute;
     margin-top: 0;
+    z-index: 11;
 
     top: 50%;
     left: 50%;
@@ -39,6 +42,10 @@
     .modalButtons {
         justify-content: flex-end;
         margin: 16px 32px 32px 32px;
+    }
+
+    p {
+        @include lightParagraph;
     }
 
     svg {
