visually changes onboard

--- a/src/assets/components/_animatedLogo.scss
+++ b/src/assets/components/_animatedLogo.scss
@@ -1,9 +1,9 @@
 .animatedLogo {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5rem;
-    width: 200px;
-    height: 200px;
+    // margin-left: auto;
+    // margin-top: 5rem;
+    width: 25px;
+    height: 25px;
+    transform: scale(0.3);
 
     .logoBox {
         z-index: 1;
