--- a/src/assets/components/_onboard.scss
+++ b/src/assets/components/_onboard.scss
@@ -1,4 +1,23 @@
 .onboard {
+    .floatingCard {
+        @include floatingCard;
+        @include cardLarge;
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .navBar {
+        // margin-top: 20px;
+    }
+
+    .logoContainer {
+        margin-right: 40px;
+    }
+
+    .mainContainer {
+    }
+
     .content {
         height: 100%;
         margin-left: 10%;
@@ -83,6 +102,10 @@
         user-select: none;
         color: $darkGray;
         opacity: 0.7;
+
+        &:first-of-type {
+            margin-left: 90px;
+        }
     }
 
     .navbar {
