--- a/src/assets/components/_channelTemplate.scss
+++ b/src/assets/components/_channelTemplate.scss
@@ -83,9 +83,9 @@
 
     height: 100%;
 
-    /*input[type="text"] {
+    input[type='text'] {
         @include editableTableField;
-    }*/
+    }
 
     .fixedWidth > button {
         min-width: 132px;
