--- a/src/assets/components/_userSettings.scss
+++ b/src/assets/components/_userSettings.scss
@@ -3,10 +3,15 @@
     margin-right: 50px;
     height: 100%;
     width: 100%;
+    overflow: hidden;
+    @include scrollWithoutScrollbar;
 
     h1 {
-        @include largeTitle;
+        @include smallTitle;
+        font-size: 25px;
         color: $companyName;
+        margin-top: -20px;
+        padding-bottom: 20px;
     }
 
     .primaryBtn {
@@ -21,15 +26,9 @@
         @include link;
     }
 
-    .formContainer {
-        display: flex;
-        column-gap: 40px;
-        margin-top: 40px;
-
-        @media (max-width: 900px) {
-            display: block;
-            column-gap: 0px;
-        }
+    .floatingSection {
+        @include floatingCard;
+        @include cardLarge;
     }
 
     .inputGroup {
@@ -60,7 +59,6 @@
 
     .buttonsContainer {
         display: flex;
-        margin-bottom: 60px;
         .pad {
             flex: 2;
         }
@@ -71,14 +69,6 @@
                 margin-right: 20px;
             }
         }
-    }
-
-    .left {
-        flex: 1;
-    }
-
-    .right {
-        flex: 1;
     }
 
     .resetPasswordForm {
