--- a/src/assets/components/_onboard.scss
+++ b/src/assets/components/_onboard.scss
@@ -7,6 +7,20 @@
         margin-top: 20px;
     }
 
+    .modalContent {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .modalButtons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+
     .navBar {
         // margin-top: 20px;
     }
